# RepoScan

./: .gitignore  CONFIG.md  IDEAS.md  INSTRUCTIONS_RACCOURCI.md  README.md  RELEASING.md  RepoScan.bat  config.example.json  config.json  console_repo_explorer.py  create_desktop_shortcut.ps1  github_repo_explorer.py  index.html  launch_explorer.sh  launch_kering_explorer.bat  package.json  pnpm-lock.yaml  setup_desktop_shortcut.bat  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
assets/icons/: README.md
config/: config.example.json
docs/: CONFIG.md  INSTRUCTIONS_RACCOURCI.md
legacy/: run.sh
legacy/scripts/: convert_png_to_ico.py
legacy/src/: console_repo_explorer.py  github_repo_explorer.py  setup_wizard.py
scripts/linux/: launch_explorer.sh
scripts/windows/: create_desktop_shortcut.ps1  debug_launch.bat  launch.bat  launch_kering_explorer.bat  launch_kering_explorer_silent.ps1  setup_desktop_shortcut.bat
src/: App.tsx  bindings.ts  config_manager.py  console_repo_explorer.py  github_repo_explorer.py  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  external.rs  fetch.rs  github.rs  mod.rs  onboarding.rs  scan.rs  updater.rs
src-tauri/src/domain/: errors.rs  types.rs
src-tauri/src/services/: config_store.rs  external.rs  fetcher.rs  git_info.rs  github.rs  github_cache.rs  github_integrations.rs  mod.rs  platform.rs  scanner.rs
src/hooks/: useCloneRepo.ts  useFetchProgress.ts  useGithubIntegrations.ts  useRepos.ts  useUpdater.ts
(+37 files in other folders)
